prevent img overflow

--- a/src/styles/splash.css
+++ b/src/styles/splash.css
@@ -13,8 +13,7 @@
   z-index: 1000;
   top: 20%;
   right: 20%;
-  width: 100%;
-  padding-left: 35%;
+  padding-left: 65%;
 }
 
 .fa-solid {
@@ -36,6 +35,7 @@
   background-color: rgb(252, 169, 17);
   position: relative;
   text-align: center;
+  max-width: 90%;
 }
 
 .splashButton {
@@ -60,4 +60,10 @@
   top: 30%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 50px;
+}
+
+@media screen and (max-width: 500px) {
+  .splashTitle {
+    font-size: 20px;
+  }
 }
